# humana_take_home

./: .env  .env.template  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  ruff.toml  test_data.csv  test_results.csv
embeddings/: default__vector_store.json  docstore.json  index_store.json
src/humana_take_home/: timer.py  utils.py
src/humana_take_home/agents/: research.py
src/humana_take_home/evaluators/: evaluator.py  utils.py
src/humana_take_home/prompts/: research_paper.py
src/humana_take_home/scripts/: generate_test_data.py  run_evaluator.py  vectorize_documents.py
src/humana_take_home/vectorizers/: pdf.py
